# grid-select

./: Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml
src/: colour.rs  config.rs  grid.rs  layout.rs  lib.rs  main.rs  render.rs  spiral.rs  state.rs  text.rs  window.rs
src/window/: compositor.rs  keyboard.rs  layer_shell.rs  output.rs  seat.rs  shm.rs
