[package]
name = "grid-select"
version = "0.1.0"
authors = ["Brendan Taylor <bct@diffeq.com>"]
edition = "2024"

description = "A menu like XMonad's GridSelect, for Wayland"
repository = "https://github.com/bct/grid-select"
license = "MIT"
keywords = ["menu", "wayland"]

[dependencies]
env_logger = "0.11"
anyhow = "1.0.80"
argh = "0.1.12"
defaults = "0.2.0"
raqote = { version = "0.8.3", default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
toml = { version = "0.9.8", default-features = false, features = ["parse", "serde", "std"] }
xdg = "3.0.0"
smithay-client-toolkit = "0.20.0"
wayland-client = "0.31.11"
cosmic-text = "0.15.0"
bytemuck = "1.24.0"

[dev-dependencies]
quickcheck = { version = "1.0.3", default-features = false }
quickcheck_macros = "1.0.0"
test-case = "3.3.1"
